--- a/automotive/src/main/res/values/themes.xml
+++ b/automotive/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.AutomotiveGearExample" parent="android:Theme.Material.Light.DarkActionBar" />
+    <style name="Theme.AutomotiveGearExample" parent="Theme.AppCompat" />
 </resources>
